--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -6,9 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CloudStore - Contato</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="contact.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./../styles/reset.css">
+        <link rel="stylesheet" href="./../contact/contact.css">
+        <link rel="stylesheet" href="./../styles/style.css">
     </head>
     <body>
         <header>
@@ -17,32 +17,32 @@
                 <h1>CloudStore</h1>
                 <nav class="wrap-menu">
                     <div class="align-icon">
-                        <a href="#" class="btnMenu btnMenu-open"><img class="image-btn" src="./assets/menu.svg"></a>
+                        <a href="#" class="btnMenu btnMenu-open"><img class="image-btn" src="./../../assets/menu.svg"></a>
                     </div>
                     
                     <ul class="menu">
-                        <li class="btnMenu btnMenuclose"><img class="image-close-menu"src="./assets/menu.svg"></li>
+                        <li class="btnMenu btnMenuclose"><img class="image-close-menu"src="./../../assets/menu.svg"></li>
                         <li class="item-menu">
                             <a href="./index.html">Home</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./products.html">Produtos</a>
+                            <a href="./../products/products.html">Produtos</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./contact.html">Contato</a>
+                            <a href="./../contact/contact.html">Contato</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./login.html">Login</a>
+                            <a href="./../login/login.html">Login</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./register.html">Registrar</a>
+                            <a href="./../register/register.html">Registrar</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
         <div class="headerLine"></div>
-        <script src="./js/index.js"></script>
+        <script src="./../../scripts/index.js"></script>
         <main>
             <section class="contentPage">
                 <h1>Entre em contato conosco</h1>
