--- a/components/products/products.html
+++ b/components/products/products.html
@@ -6,10 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CloudStore - Produtos</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="products.css">
-        <link rel="stylesheet" href="./responsive/responsiveProducts.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./../styles/reset.css">
+        <link rel="stylesheet" href="./../products/products.css">
+        <link rel="stylesheet" href="./../styles/style.css">
         
     </head>
     <body>
@@ -19,36 +18,36 @@
                 <h1>CloudStore</h1>
                 <nav class="wrap-menu">
                     <div class="align-icon">
-                        <a href="#" class="btnMenu btnMenu-open"><img class="image-btn" src="./assets/menu.svg"></a>
+                        <a href="#" class="btnMenu btnMenu-open"><img class="image-btn" src="./../../assets/menu.svg"></a>
                     </div>
                     
                     <ul class="menu">
-                        <li class="btnMenu btnMenuclose"><img class="image-close-menu"src="./assets/menu.svg"></li>
+                        <li class="btnMenu btnMenuclose"><img class="image-close-menu"src="./../../assets/menu.svg"></li>
                         <li class="item-menu">
                             <a href="./index.html">Home</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./products.html">Produtos</a>
+                            <a href="./../products/products.html">Produtos</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./contact.html">Contato</a>
+                            <a href="./../contact/contact.html">Contato</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./login.html">Login</a>
+                            <a href="./../login/login.html">Login</a>
                         </li>
                         <li class="item-menu">
-                            <a href="./register.html">Registrar</a>
+                            <a href="./../register/register.html">Registrar</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
         <div class="headerLine"></div>
-        <script src="./js/index.js"></script>
+        <script src="./../../scripts/index.js"></script>
         <main>
             <div class="container">
                 <div>
-                    <img src="./assets/product-image.gif" alt="Imagem Principal">
+                    <img src="./../../assets/product-image.gif" alt="Imagem Principal">
                 </div>
                 <div class="text">
                     <h2>Adquira nossos serviços e impulsione seu negócio!</h2>
