--- a/components/register/register.html
+++ b/components/register/register.html
@@ -5,9 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CloudStore - Registrar</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="register.css">
-        <link rel="stylesheet" href="./responsive/responsiveRegister.css">
+        <link rel="stylesheet" href="./../styles/reset.css">
+        <link rel="stylesheet" href="./../register/register.css">
     </head>
     <body>
         <main>
