Arrumando as páginas

--- a/components/products/products.html
+++ b/components/products/products.html
@@ -24,7 +24,7 @@
                     <ul class="menu">
                         <li class="btnMenu btnMenuclose"><img class="image-close-menu"src="./../../assets/menu.svg"></li>
                         <li class="item-menu">
-                            <a href="./index.html">Home</a>
+                            <a href="./../../index.html">Home</a>
                         </li>
                         <li class="item-menu">
                             <a href="./../products/products.html">Produtos</a>
