Adicionado a página de imagens

--- a/components/products/products.html
+++ b/components/products/products.html
@@ -30,6 +30,9 @@
                             <a href="./../products/products.html">Produtos</a>
                         </li>
                         <li class="item-menu">
+                            <a href="./../galery/galery.html">Galeria</a>
+                        </li>
+                        <li class="item-menu">
                             <a href="./../contact/contact.html">Contato</a>
                         </li>
                         <li class="item-menu">
