--- a/components/styles/style.css
+++ b/components/styles/style.css
@@ -74,6 +74,7 @@ header h1{
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     gap: 4rem;
     border: 1px solid #0098C6;
     border-radius: 12px;
