Fazendo alterações no nome do projeto

--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CloudStore - Contato</title>
+        <title>AgroStore - Contato</title>
         <link rel="stylesheet" href="./../styles/reset.css">
         <link rel="stylesheet" href="./../contact/contact.css">
         <link rel="stylesheet" href="./../styles/style.css">
@@ -14,7 +14,7 @@
         <header>
             <div class="headerBox">
                 <span></span>
-                <h1>CloudStore</h1>
+                <h1>AgroStore</h1>
                 <nav class="wrap-menu">
                     <div class="align-icon">
                         <a href="#" class="btnMenu btnMenu-open"><img class="image-btn" src="./../../assets/menu.svg"></a>
@@ -60,7 +60,7 @@
                 <button>
                     <div class="imgButton">
                         <i><iconify-icon class="contactIcon" icon="ic:baseline-email" height="30px" width="30px"></iconify-icon></i>
-                        contact@cloudstore.com.br
+                        contact@agrostore.com.br
                         <span></span>
                     </div>
                 </button>
