--- a/components/galery/galery.html
+++ b/components/galery/galery.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CloudStore - Galeria</title>
+    <title>AgroStore - Galeria</title>
     <link rel="stylesheet" href="./../styles/reset.css">
     <link rel="stylesheet" href="./galery.css">
     <link rel="stylesheet" href="./../styles/style.css">
@@ -16,7 +16,7 @@
     <header>
         <div class="headerBox">
             <span></span>
-            <h1>CloudStore</h1>
+            <h1>AgroStore</h1>
             <nav class="wrap-menu">
                 <div class="align-icon">
                     <a href="#" class="btnMenu btnMenu-open"><img class="image-btn" src="./../../assets/menu.svg"></a>
