--- a/components/login/login.html
+++ b/components/login/login.html
@@ -5,19 +5,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CloudStore - Login</title>
+        <title>AgroStore - Login</title>
         <link rel="stylesheet" href="./../styles/reset.css">
         <link rel="stylesheet" href="./../login/login.css">
     </head>
     <body>
         <main>
             <div class="logoContainer">
-                <h1>CloudStore</h1>
+                <h1>AgroStore</h1>
                 <div class="headerLine"></div>
             </div>
             <div class="loginContainer">
                 <div class="loginPage">
-                    <p id="loginTitle">Bem-vindo a CloudStore</p>
+                    <p id="loginTitle">Bem-vindo a AgroStore</p>
                     <h1>Logue na sua conta</h1>
                     <div class="labelDivisao">
                         <label class="loginLabel" for="e-mail">E-mail</label>
