--- a/components/register/register.html
+++ b/components/register/register.html
@@ -4,19 +4,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CloudStore - Registrar</title>
+        <title>AgroStore - Registrar</title>
         <link rel="stylesheet" href="./../styles/reset.css">
         <link rel="stylesheet" href="./../register/register.css">
     </head>
     <body>
         <main>
             <div class="logoContainer">
-                <h1>CloudStore</h1>
+                <h1>AgroStore</h1>
                 <div class="headerLine"></div>
             </div>
             <div class="registerContainer">
                 <div class="registerPage">
-                    <p id="registerTitle">Bem-vindo a CloudStore</p>
+                    <p id="registerTitle">Bem-vindo a AgroStore</p>
                     <h1>Criar conta</h1>
                     <div class="divisionLabel">
                         <label class="registerLabel" for="username">Nome de usuário</label>
